# os

kp/: CMakeLists.txt  Report.odt
kp/src/: allocator.h  binary_allocator.h  freeblock_allocator.h  main.cpp
lab1/: Report.odt
lab2/: 1.txt  CMakeCache.txt  CMakeLists.txt  Makefile  Report.docx  child  cmake_install.cmake  main
lab2/src/: child.cpp  main.cpp
lab3/: CMakeLists.txt  Report.odt
lab3/src/: main.cpp
lab4/: CMakeLists.txt  Report.odt
lab4/src/: child.cpp  main.cpp
lab5/: CMakeLists.txt  Report.odt
lab5/include/: lib.h
lab5/src/: lib1.cpp  lib2.cpp  main1.cpp  main2.cpp
lab6-8/: CMakeLists.txt  Report.odt
lab6-8/src/: client.cpp  net_realization.hpp  node_tree.hpp  server.cpp
